#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
ç»Ÿä¸€æ¥å£æ€§èƒ½æµ‹è¯•
æµ‹è¯•ç›®æ ‡ï¼š
1. é¦–æ¬¡å“åº” < 100msï¼ˆå¿«é€Ÿæ¨¡å¼ï¼‰
2. é¢„çƒ­ < 3ç§’ï¼ˆ10ä¸ªå¤§è¿å¹¶è¡Œï¼‰
3. ç¼“å­˜å‘½ä¸­ < 10ms
"""

import sys
import os
import time
import statistics
from datetime import datetime
from concurrent.futures import ThreadPoolExecutor, as_completed

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
project_root = os.path.dirname(os.path.abspath(__file__))
sys.path.insert(0, project_root)

# æ£€æŸ¥å¿…è¦çš„ä¾èµ–
def check_dependencies():
    """æ£€æŸ¥å¿…è¦çš„ä¾èµ–æ˜¯å¦å·²å®‰è£…ï¼Œè¿”å› (has_all_deps, missing_deps)"""
    missing_deps = []
    
    try:
        import grpc
    except ImportError:
        missing_deps.append("grpcio")
    
    try:
        import redis
    except ImportError:
        missing_deps.append("redis")
    
    try:
        import pymysql
    except ImportError:
        missing_deps.append("pymysql")
    
    if missing_deps:
        return False, missing_deps
    
    return True, []

# æ£€æŸ¥ä¾èµ–
has_all_deps, missing_deps = check_dependencies()
has_grpc = "grpcio" not in missing_deps

if not has_all_deps:
    print("\n" + "="*80)
    print("âš ï¸  ç¼ºå°‘éƒ¨åˆ†ä¾èµ–åŒ…ï¼š")
    for dep in missing_deps:
        print(f"   - {dep}")
    print("\nå°†ä½¿ç”¨é™çº§æ¨¡å¼è¿è¡Œæµ‹è¯•ï¼ˆè·³è¿‡éœ€è¦è¿™äº›ä¾èµ–çš„åŠŸèƒ½ï¼‰")
    print("="*80)

# å¯¼å…¥æœåŠ¡ï¼ˆå°è¯•å¯¼å…¥ï¼Œå¦‚æœå¤±è´¥åˆ™ä½¿ç”¨é™çº§æ¨¡å¼ï¼‰
BaziDetailService = None
if has_grpc:
    try:
        from server.services.bazi_detail_service import BaziDetailService
    except ImportError as e:
        print(f"\nâš ï¸  å¯¼å…¥ BaziDetailService å¤±è´¥: {e}")
        print("   å°†ä½¿ç”¨é™çº§æ¨¡å¼ï¼ˆç›´æ¥è°ƒç”¨æœ¬åœ°è®¡ç®—å‡½æ•°ï¼‰")
        has_grpc = False

# é™çº§æ¨¡å¼ï¼šç›´æ¥ä½¿ç”¨æœ¬åœ°è®¡ç®—å‡½æ•°
if not has_grpc:
    try:
        from core.calculators.helpers import compute_local_detail
        print("âœ… é™çº§æ¨¡å¼ï¼šä½¿ç”¨æœ¬åœ°è®¡ç®—å‡½æ•°")
        
        # åˆ›å»ºä¸€ä¸ªç®€å•çš„åŒ…è£…ç±»æ¥æ¨¡æ‹Ÿ BaziDetailService
        class BaziDetailServiceFallback:
            @staticmethod
            def calculate_detail_full(solar_date: str, solar_time: str, gender: str, 
                                      current_time: datetime = None, dayun_index: int = None, 
                                      target_year: int = None,
                                      quick_mode: bool = False,
                                      async_warmup: bool = False,
                                      include_wangshuai: bool = True,
                                      include_shengong_minggong: bool = True,
                                      include_rules: bool = True,
                                      include_wuxing_proportion: bool = True,
                                      include_rizhu_liujiazi: bool = True,
                                      rule_types: list = None) -> dict:
                """é™çº§æ¨¡å¼ï¼šåªä½¿ç”¨æœ¬åœ°è®¡ç®—ï¼Œä¸åŒ…å«é¢å¤–æ•°æ®"""
                result = compute_local_detail(
                    solar_date, solar_time, gender,
                    current_time=current_time,
                    dayun_index=dayun_index,
                    target_year=target_year
                )
                return result
        
        BaziDetailService = BaziDetailServiceFallback
    except ImportError as e:
        print(f"\nâŒ é™çº§æ¨¡å¼ä¹Ÿå¤±è´¥: {e}")
        print("   æ— æ³•è¿è¡Œæµ‹è¯•ï¼Œè¯·å®‰è£…å¿…è¦çš„ä¾èµ–")
        sys.exit(1)


def clear_cache_for_test(solar_date: str, solar_time: str, gender: str, current_time: datetime = None):
    """æ¸…é™¤æµ‹è¯•ç”¨çš„ç¼“å­˜"""
    try:
        from server.utils.cache_multi_level import get_multi_cache
        cache = get_multi_cache()
        
        # æ¸…é™¤æ‰€æœ‰ç›¸å…³çš„ç¼“å­˜é”®
        current_time_iso = current_time.isoformat() if current_time else None
        cache_key_patterns = [
            f'bazi_detail:{solar_date}:{solar_time}:{gender}:{current_time_iso or "default"}:*',
            f'bazi_detail:{solar_date}:{solar_time}:{gender}:*',
        ]
        
        # å°è¯•æ¸…é™¤ï¼ˆRediså¯èƒ½ä¸æ”¯æŒé€šé…ç¬¦åˆ é™¤ï¼Œè¿™é‡Œåªæ˜¯å°è¯•ï¼‰
        # å®é™…æµ‹è¯•ä¸­ï¼Œæˆ‘ä»¬ä½¿ç”¨å”¯ä¸€çš„æµ‹è¯•æ•°æ®æ¥é¿å…ç¼“å­˜å†²çª
        pass
    except Exception as e:
        print(f"âš ï¸  æ¸…é™¤ç¼“å­˜å¤±è´¥ï¼ˆä¸å½±å“æµ‹è¯•ï¼‰: {e}")


def test_first_response_performance():
    """æµ‹è¯•1ï¼šé¦–æ¬¡å“åº”æ€§èƒ½ï¼ˆå¿«é€Ÿæ¨¡å¼ï¼‰< 100ms"""
    print("\n" + "="*80)
    print("æµ‹è¯•1ï¼šé¦–æ¬¡å“åº”æ€§èƒ½ï¼ˆå¿«é€Ÿæ¨¡å¼ï¼‰")
    print("ç›®æ ‡ï¼š< 100ms")
    print("="*80)
    
    # ä½¿ç”¨å”¯ä¸€çš„æµ‹è¯•æ•°æ®ï¼Œé¿å…ç¼“å­˜å½±å“
    test_id = int(time.time() * 1000) % 1000000
    solar_date = f"1990-05-15"
    solar_time = "14:30"
    gender = "male"
    current_time = datetime.now()
    
    # æ¸…é™¤ç¼“å­˜ï¼ˆå¦‚æœå­˜åœ¨ï¼‰
    clear_cache_for_test(solar_date, solar_time, gender, current_time)
    
    # æ‰§è¡Œå¤šæ¬¡æµ‹è¯•å–å¹³å‡å€¼
    test_count = 10
    response_times = []
    
    for i in range(test_count):
        # ä½¿ç”¨å”¯ä¸€çš„å‚æ•°é¿å…ç¼“å­˜
        unique_solar_date = f"199{test_id % 10}-05-{(15 + i) % 28 + 1:02d}"
        
        start_time = time.time()
        try:
            result = BaziDetailService.calculate_detail_full(
                solar_date=unique_solar_date,
                solar_time=solar_time,
                gender=gender,
                current_time=current_time,
                quick_mode=True,  # å¿«é€Ÿæ¨¡å¼
                async_warmup=False,  # å…ˆä¸è§¦å‘é¢„çƒ­ï¼Œåªæµ‹è¯•é¦–æ¬¡å“åº”
                include_wangshuai=True,
                include_shengong_minggong=True,
                include_rules=True,
                include_wuxing_proportion=True,
                include_rizhu_liujiazi=True
            )
            elapsed_ms = (time.time() - start_time) * 1000
            response_times.append(elapsed_ms)
            
            # éªŒè¯è¿”å›æ•°æ®å®Œæ•´æ€§
            assert result is not None, "è¿”å›ç»“æœä¸èƒ½ä¸ºç©º"
            assert 'bazi_pillars' in result, "å¿…é¡»åŒ…å«åŸºç¡€å…«å­—æ•°æ®"
            assert 'dayun_sequence' in result, "å¿…é¡»åŒ…å«å¤§è¿åºåˆ—"
            
            print(f"  æµ‹è¯• {i+1}/{test_count}: {elapsed_ms:.2f}ms - âœ… æ•°æ®å®Œæ•´")
        except Exception as e:
            elapsed_ms = (time.time() - start_time) * 1000
            response_times.append(elapsed_ms)
            print(f"  æµ‹è¯• {i+1}/{test_count}: {elapsed_ms:.2f}ms - âŒ é”™è¯¯: {e}")
    
    # ç»Ÿè®¡ç»“æœ
    avg_time = statistics.mean(response_times)
    min_time = min(response_times)
    max_time = max(response_times)
    median_time = statistics.median(response_times)
    
    print(f"\nğŸ“Š ç»Ÿè®¡ç»“æœï¼š")
    print(f"  å¹³å‡å“åº”æ—¶é—´: {avg_time:.2f}ms")
    print(f"  æœ€å°å“åº”æ—¶é—´: {min_time:.2f}ms")
    print(f"  æœ€å¤§å“åº”æ—¶é—´: {max_time:.2f}ms")
    print(f"  ä¸­ä½æ•°å“åº”æ—¶é—´: {median_time:.2f}ms")
    
    # åˆ¤æ–­æ˜¯å¦è¾¾æ ‡
    target_ms = 100
    if avg_time < target_ms:
        print(f"\nâœ… æµ‹è¯•é€šè¿‡ï¼šå¹³å‡å“åº”æ—¶é—´ {avg_time:.2f}ms < ç›®æ ‡ {target_ms}ms")
        return True
    else:
        print(f"\nâŒ æµ‹è¯•å¤±è´¥ï¼šå¹³å‡å“åº”æ—¶é—´ {avg_time:.2f}ms >= ç›®æ ‡ {target_ms}ms")
        return False


def test_cache_hit_performance():
    """æµ‹è¯•2ï¼šç¼“å­˜å‘½ä¸­æ€§èƒ½ < 10ms"""
    print("\n" + "="*80)
    print("æµ‹è¯•2ï¼šç¼“å­˜å‘½ä¸­æ€§èƒ½")
    print("ç›®æ ‡ï¼š< 10ms")
    print("="*80)
    
    # ä½¿ç”¨å›ºå®šçš„æµ‹è¯•æ•°æ®
    solar_date = f"1990-05-15"
    solar_time = "14:30"
    gender = "male"
    current_time = datetime.now()
    
    # å…ˆæ‰§è¡Œä¸€æ¬¡è®¡ç®—ï¼Œç¡®ä¿ç¼“å­˜å­˜åœ¨
    print("  é¢„çƒ­ï¼šæ‰§è¡Œé¦–æ¬¡è®¡ç®—ä»¥å¡«å……ç¼“å­˜...")
    start_time = time.time()
    BaziDetailService.calculate_detail_full(
        solar_date=solar_date,
        solar_time=solar_time,
        gender=gender,
        current_time=current_time,
        quick_mode=True,
        async_warmup=False,
        include_wangshuai=True,
        include_shengong_minggong=True,
        include_rules=True,
        include_wuxing_proportion=True,
        include_rizhu_liujiazi=True
    )
    warmup_time = (time.time() - start_time) * 1000
    print(f"  é¢„çƒ­å®Œæˆï¼Œè€—æ—¶: {warmup_time:.2f}ms")
    
    # ç­‰å¾…ä¸€å°æ®µæ—¶é—´ï¼Œç¡®ä¿ç¼“å­˜å†™å…¥å®Œæˆ
    time.sleep(0.1)
    
    # æ‰§è¡Œå¤šæ¬¡ç¼“å­˜å‘½ä¸­æµ‹è¯•
    test_count = 20
    cache_hit_times = []
    
    for i in range(test_count):
        start_time = time.time()
        try:
            result = BaziDetailService.calculate_detail_full(
                solar_date=solar_date,
                solar_time=solar_time,
                gender=gender,
                current_time=current_time,
                quick_mode=True,
                async_warmup=False,
                include_wangshuai=True,
                include_shengong_minggong=True,
                include_rules=True,
                include_wuxing_proportion=True,
                include_rizhu_liujiazi=True
            )
            elapsed_ms = (time.time() - start_time) * 1000
            cache_hit_times.append(elapsed_ms)
            
            assert result is not None, "è¿”å›ç»“æœä¸èƒ½ä¸ºç©º"
            print(f"  æµ‹è¯• {i+1}/{test_count}: {elapsed_ms:.2f}ms - âœ…")
        except Exception as e:
            elapsed_ms = (time.time() - start_time) * 1000
            cache_hit_times.append(elapsed_ms)
            print(f"  æµ‹è¯• {i+1}/{test_count}: {elapsed_ms:.2f}ms - âŒ é”™è¯¯: {e}")
    
    # ç»Ÿè®¡ç»“æœ
    avg_time = statistics.mean(cache_hit_times)
    min_time = min(cache_hit_times)
    max_time = max(cache_hit_times)
    median_time = statistics.median(cache_hit_times)
    
    print(f"\nğŸ“Š ç»Ÿè®¡ç»“æœï¼š")
    print(f"  å¹³å‡å“åº”æ—¶é—´: {avg_time:.2f}ms")
    print(f"  æœ€å°å“åº”æ—¶é—´: {min_time:.2f}ms")
    print(f"  æœ€å¤§å“åº”æ—¶é—´: {max_time:.2f}ms")
    print(f"  ä¸­ä½æ•°å“åº”æ—¶é—´: {median_time:.2f}ms")
    
    # åˆ¤æ–­æ˜¯å¦è¾¾æ ‡
    target_ms = 10
    if avg_time < target_ms:
        print(f"\nâœ… æµ‹è¯•é€šè¿‡ï¼šå¹³å‡å“åº”æ—¶é—´ {avg_time:.2f}ms < ç›®æ ‡ {target_ms}ms")
        return True
    else:
        print(f"\nâŒ æµ‹è¯•å¤±è´¥ï¼šå¹³å‡å“åº”æ—¶é—´ {avg_time:.2f}ms >= ç›®æ ‡ {target_ms}ms")
        return False


def test_async_warmup_performance():
    """æµ‹è¯•3ï¼šå¼‚æ­¥é¢„çƒ­æ€§èƒ½ < 3ç§’ï¼ˆ10ä¸ªå¤§è¿å¹¶è¡Œï¼‰"""
    print("\n" + "="*80)
    print("æµ‹è¯•3ï¼šå¼‚æ­¥é¢„çƒ­æ€§èƒ½ï¼ˆ10ä¸ªå¤§è¿å¹¶è¡Œï¼‰")
    print("ç›®æ ‡ï¼š< 3ç§’")
    print("="*80)
    
    # ä½¿ç”¨å”¯ä¸€çš„æµ‹è¯•æ•°æ®
    test_id = int(time.time() * 1000) % 1000000
    solar_date = f"199{test_id % 10}-05-15"
    solar_time = "14:30"
    gender = "male"
    current_time = datetime.now()
    
    # æ¸…é™¤ç¼“å­˜
    clear_cache_for_test(solar_date, solar_time, gender, current_time)
    
    # æµ‹è¯•æ–¹æ³•1ï¼šç›´æ¥æµ‹è¯•å¼‚æ­¥é¢„çƒ­å‡½æ•°
    print("\n  æ–¹æ³•1ï¼šæµ‹è¯•å¼‚æ­¥é¢„çƒ­å‡½æ•°ï¼ˆåå°å¹¶è¡Œè®¡ç®—10ä¸ªå¤§è¿ï¼‰...")
    
    start_time = time.time()
    
    # æ‰‹åŠ¨è§¦å‘å¼‚æ­¥é¢„çƒ­ï¼ˆæ¨¡æ‹Ÿ quick_mode + async_warmup çš„è¡Œä¸ºï¼‰
    from concurrent.futures import ThreadPoolExecutor
    import threading
    
    def warmup_dayun(dayun_idx: int):
        """é¢„çƒ­å•ä¸ªå¤§è¿"""
        try:
            from core.calculators.helpers import compute_local_detail
            result = compute_local_detail(
                solar_date, solar_time, gender,
                current_time=current_time,
                dayun_index=dayun_idx
            )
            # éªŒè¯ç»“æœ
            if result and 'bazi_pillars' in result:
                return dayun_idx, True, None
            else:
                return dayun_idx, False, "è¿”å›ç»“æœä¸ºç©ºæˆ–ä¸å®Œæ•´"
        except Exception as e:
            return dayun_idx, False, str(e)
    
    # å¹¶è¡Œè®¡ç®—10ä¸ªå¤§è¿
    executor = ThreadPoolExecutor(max_workers=10, thread_name_prefix="bazi_warmup_test")
    futures = []
    for dayun_index in range(10):
        future = executor.submit(warmup_dayun, dayun_index)
        futures.append(future)
    
    # ç­‰å¾…æ‰€æœ‰ä»»åŠ¡å®Œæˆ
    completed_count = 0
    failed_count = 0
    for future in as_completed(futures):
        dayun_idx, success, error = future.result()
        if success:
            completed_count += 1
            print(f"    âœ… å¤§è¿ {dayun_idx} é¢„çƒ­å®Œæˆ")
        else:
            failed_count += 1
            print(f"    âŒ å¤§è¿ {dayun_idx} é¢„çƒ­å¤±è´¥: {error}")
    
    elapsed_time = time.time() - start_time
    elapsed_ms = elapsed_time * 1000
    
    print(f"\nğŸ“Š é¢„çƒ­ç»“æœï¼š")
    print(f"  æ€»è€—æ—¶: {elapsed_ms:.2f}ms ({elapsed_time:.2f}ç§’)")
    print(f"  æˆåŠŸ: {completed_count}/10")
    print(f"  å¤±è´¥: {failed_count}/10")
    
    # åˆ¤æ–­æ˜¯å¦è¾¾æ ‡
    target_seconds = 3
    if elapsed_time < target_seconds:
        print(f"\nâœ… æµ‹è¯•é€šè¿‡ï¼šé¢„çƒ­æ—¶é—´ {elapsed_time:.2f}ç§’ < ç›®æ ‡ {target_seconds}ç§’")
        return True
    else:
        print(f"\nâŒ æµ‹è¯•å¤±è´¥ï¼šé¢„çƒ­æ—¶é—´ {elapsed_time:.2f}ç§’ >= ç›®æ ‡ {target_seconds}ç§’")
        return False


def test_end_to_end_performance():
    """æµ‹è¯•4ï¼šç«¯åˆ°ç«¯æ€§èƒ½ï¼ˆå¿«é€Ÿæ¨¡å¼ + å¼‚æ­¥é¢„çƒ­ï¼‰"""
    print("\n" + "="*80)
    print("æµ‹è¯•4ï¼šç«¯åˆ°ç«¯æ€§èƒ½ï¼ˆå¿«é€Ÿæ¨¡å¼ + å¼‚æ­¥é¢„çƒ­ï¼‰")
    print("ç›®æ ‡ï¼šé¦–æ¬¡å“åº” < 100msï¼Œé¢„çƒ­åœ¨åå°å®Œæˆ < 3ç§’")
    print("="*80)
    
    # ä½¿ç”¨å”¯ä¸€çš„æµ‹è¯•æ•°æ®
    test_id = int(time.time() * 1000) % 1000000
    solar_date = f"199{test_id % 10}-05-15"
    solar_time = "14:30"
    gender = "male"
    current_time = datetime.now()
    
    # æ¸…é™¤ç¼“å­˜
    clear_cache_for_test(solar_date, solar_time, gender, current_time)
    
    # æµ‹è¯•å¿«é€Ÿæ¨¡å¼ + å¼‚æ­¥é¢„çƒ­
    print("\n  æ‰§è¡Œå¿«é€Ÿæ¨¡å¼è®¡ç®—ï¼ˆè§¦å‘å¼‚æ­¥é¢„çƒ­ï¼‰...")
    
    start_time = time.time()
    result = BaziDetailService.calculate_detail_full(
        solar_date=solar_date,
        solar_time=solar_time,
        gender=gender,
        current_time=current_time,
        quick_mode=True,  # å¿«é€Ÿæ¨¡å¼
        async_warmup=True,  # è§¦å‘å¼‚æ­¥é¢„çƒ­
        include_wangshuai=True,
        include_shengong_minggong=True,
        include_rules=True,
        include_wuxing_proportion=True,
        include_rizhu_liujiazi=True
    )
    first_response_time = (time.time() - start_time) * 1000
    
    print(f"  é¦–æ¬¡å“åº”æ—¶é—´: {first_response_time:.2f}ms")
    
    # éªŒè¯è¿”å›æ•°æ®
    assert result is not None, "è¿”å›ç»“æœä¸èƒ½ä¸ºç©º"
    assert 'bazi_pillars' in result, "å¿…é¡»åŒ…å«åŸºç¡€å…«å­—æ•°æ®"
    assert 'dayun_sequence' in result, "å¿…é¡»åŒ…å«å¤§è¿åºåˆ—"
    
    print(f"  âœ… æ•°æ®å®Œæ•´æ€§éªŒè¯é€šè¿‡")
    
    # ç­‰å¾…å¼‚æ­¥é¢„çƒ­å®Œæˆï¼ˆæœ€å¤šç­‰å¾…5ç§’ï¼‰
    print(f"\n  ç­‰å¾…å¼‚æ­¥é¢„çƒ­å®Œæˆï¼ˆæœ€å¤š5ç§’ï¼‰...")
    warmup_start = time.time()
    max_wait_time = 5.0
    
    # æ£€æŸ¥æ‰€æœ‰å¤§è¿æ˜¯å¦å·²ç¼“å­˜ï¼ˆé€šè¿‡å°è¯•è¯»å–ç¼“å­˜ï¼‰
    # æ³¨æ„ï¼šå¼‚æ­¥é¢„çƒ­ä¼šè®¡ç®—æ¯ä¸ªå¤§è¿ï¼Œä½†å¯èƒ½ä¸ä¼šç«‹å³å†™å…¥ç¼“å­˜
    # æˆ‘ä»¬é€šè¿‡æ£€æŸ¥è®¡ç®—æ˜¯å¦å®Œæˆæ¥åˆ¤æ–­é¢„çƒ­çŠ¶æ€
    cached_count = 0
    last_cached_count = 0
    stable_count = 0
    
    while time.time() - warmup_start < max_wait_time:
        cached_count = 0
        for dayun_idx in range(10):
            try:
                from server.utils.cache_multi_level import get_multi_cache
                cache = get_multi_cache()
                current_time_iso = current_time.isoformat()
                # ç¼“å­˜é”®æ ¼å¼ï¼šbazi_detail:date:time:gender:current_time:dayun_index:all:full
                cache_key = f'bazi_detail:{solar_date}:{solar_time}:{gender}:{current_time_iso}:{dayun_idx}:all:full'
                cached = cache.get(cache_key)
                if cached:
                    cached_count += 1
            except Exception as e:
                # å¿½ç•¥ç¼“å­˜æ£€æŸ¥é”™è¯¯
                pass
        
        # å¦‚æœç¼“å­˜æ•°é‡ç¨³å®šï¼Œè®¤ä¸ºé¢„çƒ­å®Œæˆ
        if cached_count == last_cached_count:
            stable_count += 1
        else:
            stable_count = 0
        
        last_cached_count = cached_count
        
        if cached_count >= 8 or stable_count >= 3:  # è‡³å°‘8ä¸ªå¤§è¿å·²ç¼“å­˜ï¼Œæˆ–ç¨³å®š3æ¬¡æ£€æŸ¥
            break
        
        time.sleep(0.3)
    
    warmup_elapsed = time.time() - warmup_start
    
    print(f"  é¢„çƒ­ç­‰å¾…æ—¶é—´: {warmup_elapsed:.2f}ç§’")
    print(f"  å·²ç¼“å­˜å¤§è¿æ•°: {cached_count}/10")
    
    # åˆ¤æ–­æ˜¯å¦è¾¾æ ‡
    first_response_ok = first_response_time < 100
    warmup_ok = warmup_elapsed < 3.0
    
    if first_response_ok and warmup_ok:
        print(f"\nâœ… æµ‹è¯•é€šè¿‡ï¼š")
        print(f"  é¦–æ¬¡å“åº”: {first_response_time:.2f}ms < 100ms âœ…")
        print(f"  é¢„çƒ­æ—¶é—´: {warmup_elapsed:.2f}ç§’ < 3ç§’ âœ…")
        return True
    else:
        print(f"\nâŒ æµ‹è¯•å¤±è´¥ï¼š")
        if not first_response_ok:
            print(f"  é¦–æ¬¡å“åº”: {first_response_time:.2f}ms >= 100ms âŒ")
        if not warmup_ok:
            print(f"  é¢„çƒ­æ—¶é—´: {warmup_elapsed:.2f}ç§’ >= 3ç§’ âŒ")
        return False


def main():
    """ä¸»æµ‹è¯•å‡½æ•°"""
    print("\n" + "="*80)
    print("ç»Ÿä¸€æ¥å£æ€§èƒ½æµ‹è¯•")
    print("="*80)
    print("\næµ‹è¯•ç›®æ ‡ï¼š")
    print("  1. é¦–æ¬¡å“åº” < 100msï¼ˆå¿«é€Ÿæ¨¡å¼ï¼‰")
    print("  2. é¢„çƒ­ < 3ç§’ï¼ˆ10ä¸ªå¤§è¿å¹¶è¡Œï¼‰")
    print("  3. ç¼“å­˜å‘½ä¸­ < 10ms")
    print("="*80)
    
    results = {}
    
    # æµ‹è¯•1ï¼šé¦–æ¬¡å“åº”æ€§èƒ½
    try:
        results['first_response'] = test_first_response_performance()
    except Exception as e:
        print(f"\nâŒ æµ‹è¯•1å¤±è´¥: {e}")
        import traceback
        traceback.print_exc()
        results['first_response'] = False
    
    # æµ‹è¯•2ï¼šç¼“å­˜å‘½ä¸­æ€§èƒ½
    try:
        results['cache_hit'] = test_cache_hit_performance()
    except Exception as e:
        print(f"\nâŒ æµ‹è¯•2å¤±è´¥: {e}")
        import traceback
        traceback.print_exc()
        results['cache_hit'] = False
    
    # æµ‹è¯•3ï¼šå¼‚æ­¥é¢„çƒ­æ€§èƒ½
    try:
        results['async_warmup'] = test_async_warmup_performance()
    except Exception as e:
        print(f"\nâŒ æµ‹è¯•3å¤±è´¥: {e}")
        import traceback
        traceback.print_exc()
        results['async_warmup'] = False
    
    # æµ‹è¯•4ï¼šç«¯åˆ°ç«¯æ€§èƒ½
    try:
        results['end_to_end'] = test_end_to_end_performance()
    except Exception as e:
        print(f"\nâŒ æµ‹è¯•4å¤±è´¥: {e}")
        import traceback
        traceback.print_exc()
        results['end_to_end'] = False
    
    # æ±‡æ€»ç»“æœ
    print("\n" + "="*80)
    print("æµ‹è¯•ç»“æœæ±‡æ€»")
    print("="*80)
    
    for test_name, passed in results.items():
        status = "âœ… é€šè¿‡" if passed else "âŒ å¤±è´¥"
        print(f"  {test_name}: {status}")
    
    all_passed = all(results.values())
    
    if all_passed:
        print("\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼")
        return 0
    else:
        print("\nâš ï¸  éƒ¨åˆ†æµ‹è¯•å¤±è´¥ï¼Œè¯·æ£€æŸ¥æ€§èƒ½æŒ‡æ ‡")
        return 1


if __name__ == "__main__":
    exit(main())

